[project]
name = "exp-tracker"
version = "0.2.0"
description = "Lightweight ML experiment tracker for competitions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rhendy Japelhendal Saragih Sumbayak", email = "rhendygio19@gmail.com" }
]
dependencies = ["click>=8.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
exp-tracker = "exp_tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
